ssao finally works!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cmake.configureOnOpen": false,
     "cSpell.ignoreWords": [
-        "glslc"
+        "bitangent",
+        "glslc",
+        "ssao"
     ]
 }
