fixed all destruction/cleanup bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "files.associations": {
         "*.rgen": "glsl",
         "*.rchit": "glsl",
-        "*.rmiss": "glsl"
+        "*.rmiss": "glsl",
+        "vector": "cpp"
     }
 }
