--- a/VkRenderer/Scene/CMakeLists.txt
+++ b/VkRenderer/Scene/CMakeLists.txt
@@ -8,6 +8,6 @@ file(GLOB_RECURSE HEADERS "include/*.h")
 
 add_library(Scene SHARED ${SOURCE_FILES} ${HEADERS})
 
-target_link_libraries(Scene PRIVATE glm spdlog SDL2::SDL2 SDL2::SDL2main) 
+target_link_libraries(Scene PRIVATE glm spdlog SDL2::SDL2 SDL2::SDL2main nlohmann_json::nlohmann_json)
 
 target_include_directories(Scene PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
