--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Linux CMake Build
 
 on:
   push:
@@ -7,102 +7,27 @@ on:
     branches: [ dev ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        build_type: [Release, Debug]
-        
-    runs-on: ${{ matrix.os }}
-    
+  build-linux:
+    runs-on: ubuntu-24.04
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    
-    - name: Install Vulkan SDK and SDL2 (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
+
+    - name: Install Vulkan SDK
       run: |
-        # Install SDL2 first
-        sudo apt update
-        sudo apt install -y libsdl2-2.0-0 libsdl2-dev libsdl-image1.2-dev libsdl1.2-dev
-        
-        # Install Vulkan SDK with dependency resolution
         wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
         sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list http://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list
         sudo apt update
-        
-        # Install libyaml-cpp dependency manually
-        sudo apt install -y libyaml-cpp-dev
-        
-        # Try to install vulkan-sdk, if it fails, install essential components only
-        sudo apt install -y vulkan-sdk || {
-          echo "Full vulkan-sdk failed, installing essential components..."
-          sudo apt install -y vulkan-tools libvulkan1 libvulkan-dev vulkan-validationlayers-dev spirv-tools
-        }
-    
-    - name: Install Vulkan SDK (macOS)
-      if: matrix.os == 'macos-latest'
+        sudo apt install -y vulkan-sdk
+
+    - name: Install SDL2 and dependencies
       run: |
-        brew install cmake ninja
-        # Download and install Vulkan SDK
-        curl -L -o vulkansdk.dmg https://sdk.lunarg.com/sdk/download/latest/mac/vulkan-sdk.dmg
-        hdiutil attach vulkansdk.dmg
-        sudo /Volumes/VulkanSDK/InstallVulkan.app/Contents/MacOS/InstallVulkan --root ~/VulkanSDK --accept-licenses --default-answer --confirm-command install
-        hdiutil detach /Volumes/VulkanSDK
-        echo "VULKAN_SDK=$HOME/VulkanSDK/macOS" >> $GITHUB_ENV
-        echo "$HOME/VulkanSDK/macOS/bin" >> $GITHUB_PATH
-    
-    - name: Install Vulkan SDK and SDL2 (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        # Install Vulkan SDK using Chocolatey (more reliable)
-        choco install vulkan-sdk -y
-        
-        # Install SDL2 via vcpkg
-        git clone https://github.com/Microsoft/vcpkg.git
-        .\vcpkg\bootstrap-vcpkg.bat
-        .\vcpkg\vcpkg install sdl2:x64-windows sdl2-image:x64-windows
-        
-        # Set environment variables
-        echo "VULKAN_SDK=C:\VulkanSDK" | Out-File -FilePath $env:GITHUB_ENV -Append
-        echo "C:\VulkanSDK\Bin" | Out-File -FilePath $env:GITHUB_PATH -Append
-        echo "CMAKE_TOOLCHAIN_FILE=$PWD\vcpkg\scripts\buildsystems\vcpkg.cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
-    
-    - name: Configure CMake
+        sudo apt install -y libsdl2-2.0-0 libsdl2-dev libsdl-image1.2-dev libsdl1.2-dev
+
+    - name: Create build directory and run CMake
       run: |
         mkdir build
         cd build
-        if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          cmake .. -DCMAKE_TOOLCHAIN_FILE=$CMAKE_TOOLCHAIN_FILE
-        else
-          cmake ..
-        fi
-      shell: bash
-    
-    - name: Build
-      run: |
-        cd build
-        if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          cmake --build . --config ${{ matrix.build_type }}
-        else
-          make
-        fi
-      shell: bash
-    
-    - name: Test
-      working-directory: build
-      run: ctest --output-on-failure --parallel
-      continue-on-error: true
-    
-    - name: Upload build artifacts
-      if: matrix.build_type == 'Release'
-      uses: actions/upload-artifact@v4
-      with:
-        name: renderer-${{ matrix.os }}
-        path: |
-          build/bin/
-          build/*.exe
-          build/Release/
-        retention-days: 7
+        cmake ..
+        make -j$(nproc)
