--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,3 +31,28 @@ jobs:
         cd build
         cmake ..
         make -j$(nproc)
+
+    - name: Upload RendererTests binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: renderer-tests
+        path: build/Debug/RendererTests 
+  
+  test-linux:
+    needs: build-linux
+    runs-on: ubuntu-24.04
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Download RendererTests artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: renderer-tests
+        path: ./tests
+
+    - name: Run RendererTests
+      run: |
+        chmod +x ./tests/RendererTests
+        ./tests/RendererTests
