[Debug] Add step to list build directory contents before uploading RendererTests binary

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,10 @@ jobs:
         cmake .. -DCMAKE_BUILD_TYPE=Release
         make -j$(nproc)
 
+    - name: List build directory contents
+      run: |
+        ls -R build
+
     - name: Upload RendererTests binary
       uses: actions/upload-artifact@v4
       with:
