--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: renderer-tests
-        path: build/Release/RendererTests 
+        path: build/RendererTests 
   
   test-linux:
     needs: build-linux
