[Debug] Update build directory listing to show contents of the tests folder

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
 
     - name: List build directory contents
       run: |
-        ls -R build
+        ls -l ./tests
 
     - name: Upload RendererTests binary
       uses: actions/upload-artifact@v4
