--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,13 +50,24 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Download full build artifact
+    - name: Install Vulkan SDK
+      run: |
+        wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+        sudo apt update
+        sudo apt install -y vulkan-sdk
+    
+    - name: Install SDL2 runtime dependencies
+      run: |
+        sudo apt install -y libsdl2-2.0-0
+
+    - name: Download RendererTests artifact
       uses: actions/download-artifact@v4
       with:
-        name: build-artifact
-        path: ./build
+        name: renderer-tests
+        path: ./
 
     - name: Run RendererTests
       run: |
-        chmod +x ./build/RendererTests
-        ./build/RendererTests
+        chmod +x ./RendererTests
+        ./RendererTests
