[Fix] fixed wrong artifact name that prevented workflow to work

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
     - name: Download RendererTests artifact
       uses: actions/download-artifact@v4
       with:
-        name: renderer-tests
+        name: build-artifact
         path: ./
 
     - name: Run RendererTests
