[Refactor] Changed Scene lib to static library

--- a/VkRenderer/Scene/CMakeLists.txt
+++ b/VkRenderer/Scene/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SOURCE_FILES
 
 file(GLOB_RECURSE HEADERS "include/*.h")
 
-add_library(Scene SHARED ${SOURCE_FILES} ${HEADERS})
+add_library(Scene STATIC ${SOURCE_FILES} ${HEADERS})
 
 target_link_libraries(Scene PRIVATE glm spdlog SDL2::SDL2 SDL2::SDL2main nlohmann_json::nlohmann_json)
 
