--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,5 +29,45 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake .. -DCMAKE_BUILD_TYPE=Release
         make -j$(nproc)
+
+    - name: List build directory contents
+      run: |
+        ls -l ./tests
+
+    - name: Upload entire build directory
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifact
+        path: build/
+  
+  test-linux:
+    needs: build-linux
+    runs-on: ubuntu-24.04
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install Vulkan SDK
+      run: |
+        wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list http://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+        sudo apt update
+        sudo apt install -y vulkan-sdk
+    
+    - name: Install SDL2 runtime dependencies
+      run: |
+        sudo apt install -y libsdl2-2.0-0
+
+    - name: Download RendererTests artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifact
+        path: ./
+
+    - name: Run RendererTests
+      run: |
+        chmod +x ./RendererTests
+        ./RendererTests
