[Feature] Integrate Nsight Aftermath SDK for crash dumps (#32)
* [Feature] GPU Crash monitoring added via Nsight Aftermath

* [Feature] GPU Crash monitor optional build target in cmake

* [Feature] Integrate GPUCrashMonitor with vk_engine. Crash dump shows helpful automatic trackers in pipeline.

* [Cleanup] Comment out crashMethod2 call to prevent infinite loop during testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.11)
 set(CMAKE_CXX_STANDARD 20)             # available options are [98, 11, 14, 17, 20]
 project(ExperiRender)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(FetchContent)
 
-# Option to enable warnings as errors (default OFF)
+# Options
+option(ENABLE_NSIGHT_AFTERMATH "Enable Nsight Aftermath crash debugging integration" OFF)
 option(WARNINGS_AS_ERRORS "Treat compiler warnings as errors" OFF)
 
 #############
@@ -49,6 +51,15 @@ set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
 # Dependencies
 # vulkan
 find_package(Vulkan REQUIRED)
+
+# Nsight Aftermath
+if(ENABLE_NSIGHT_AFTERMATH)
+    find_package(NsightAftermath REQUIRED)
+    add_compile_definitions(NSIGHT_AFTERMATH_ENABLED)
+    message(STATUS "Nsight Aftermath is enabled")
+else()
+    message(STATUS "Nsight Aftermath is disabled")
+endif()
 
 # SDL2 - Platform-specific setup
 if(WIN32)
@@ -194,6 +205,11 @@ add_custom_target(compile_shaders ALL DEPENDS ${SPV_OUTPUTS})
 # SubFolders
 add_subdirectory(VkRenderer/Scene)
 
+# GPU Crash Monitor - Conditional compilation based on Nsight Aftermath
+if(ENABLE_NSIGHT_AFTERMATH)
+    add_subdirectory(VkRenderer/GPUCrashMonitor)
+endif()
+
 # Create a library from renderer code (for testing)
 file(GLOB CPP_SRC
         "VkRenderer/*.cpp"
@@ -213,14 +229,40 @@ else()
     target_include_directories(RendererLib PUBLIC VkRenderer/ ${SDL2_INCLUDE_DIRS})
 endif()
 
+# Base libraries for renderer library
+set(RENDERER_BASE_LIBS
+    glm::glm 
+    Vulkan::Vulkan 
+    vk-bootstrap::vk-bootstrap 
+    VulkanMemoryAllocator 
+    imgui 
+    fastgltf 
+    spdlog::spdlog 
+    stb 
+    nlohmann_json::nlohmann_json 
+    Scene
+)
+
 # Platform-specific libraries for renderer library
 if(WIN32)
     target_link_libraries(RendererLib PUBLIC
-        glm::glm Vulkan::Vulkan SDL2::SDL2 SDL2::SDL2main vk-bootstrap::vk-bootstrap VulkanMemoryAllocator imgui fastgltf spdlog::spdlog stb nlohmann_json::nlohmann_json Scene)
+        ${RENDERER_BASE_LIBS}
+        SDL2::SDL2 
+        SDL2::SDL2main
+    )
 else()
     target_link_libraries(RendererLib PUBLIC
-        glm::glm Vulkan::Vulkan ${SDL2_LIBRARIES} vk-bootstrap::vk-bootstrap VulkanMemoryAllocator imgui fastgltf spdlog::spdlog stb nlohmann_json::nlohmann_json Scene)
-    target_link_libraries(RendererLib PUBLIC dl pthread X11)
+        ${RENDERER_BASE_LIBS}
+        ${SDL2_LIBRARIES}
+        dl 
+        pthread 
+        X11
+    )
+endif()
+
+# Conditionally link GPU Crash Monitor
+if(ENABLE_NSIGHT_AFTERMATH)
+    target_link_libraries(RendererLib PUBLIC GPUCrashMonitor)
 endif()
 
 # Main executable
@@ -243,6 +285,15 @@ if(WIN32)
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
             "${CMAKE_CURRENT_SOURCE_DIR}/deps/SDL2-2.30.3/lib/x64/SDL2.dll"
             $<TARGET_FILE_DIR:Renderer>)
+    
+    # Copy Nsight Aftermath DLL to output directory if enabled
+    if(ENABLE_NSIGHT_AFTERMATH AND NsightAftermath_FOUND AND NsightAftermath_DLL)
+        add_custom_command(TARGET Renderer POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                "${NsightAftermath_DLL}"
+                $<TARGET_FILE_DIR:Renderer>
+            COMMENT "Copying Nsight Aftermath DLL to output directory")
+    endif()
 endif()
 
 # Enable testing
