[Cleanup] make sure action doesn't check deps for style checks

--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -16,4 +16,5 @@ jobs:
       uses: jidicula/clang-format-action@v4.13.0
       with:
         clang-format-version: '20'
-        check-path: 'VkRenderer tests'
+        check-path: '.'
+        include-regex: '^(VkRenderer|tests)\/.*\.(cpp|h|hpp)$'
