--- a/.github/workflows/style-check.yaml
+++ b/.github/workflows/style-check.yaml
@@ -13,8 +13,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run clang-format style check
-      uses: jidicula/clang-format-action@v4.13.0
+      uses: jidicula/clang-format-action@v4.15.0
       with:
         clang-format-version: '20'
-        check-path: '.'
-        include-regex: '^(VkRenderer|tests)\/.*\.(cpp|h|hpp)$'
+        check-path: 'VkRenderer tests'
+        fallback-style: 'llvm'
+        exclude-regex: '^\./(build|deps)/.*'
