--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -39,7 +39,7 @@ jobs:
     - name: Upload entire build directory
       uses: actions/upload-artifact@v4
       with:
-        name: build-artifact
+        name: build-artifact-linux
         path: build/
   
   test-linux:
@@ -64,7 +64,7 @@ jobs:
     - name: Download RendererTests artifact
       uses: actions/download-artifact@v4
       with:
-        name: build-artifact
+        name: build-artifact-linux
         path: ./
 
     - name: Run RendererTests
