--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -21,27 +21,18 @@ jobs:
 
     - name: Install Vulkan SDK
       run: |
-        $VulkanVersion = "1.3.283.0"
-        $VulkanInstaller = "VulkanSDK-$VulkanVersion-Installer.exe"
-        $VulkanUrl = "https://sdk.lunarg.com/sdk/download/$VulkanVersion/windows/$VulkanInstaller"
-        
-        Write-Host "Downloading Vulkan SDK..."
-        Invoke-WebRequest -Uri $VulkanUrl -OutFile $VulkanInstaller
-        
-        Write-Host "Installing Vulkan SDK..."
-        Start-Process -FilePath $VulkanInstaller -ArgumentList @("/S") -Wait -NoNewWindow
-        
-        # Add Vulkan SDK to PATH and environment variables
-        $VulkanPath = "C:\VulkanSDK\$VulkanVersion"
-        echo "VULKAN_SDK=$VulkanPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "$VulkanPath\Bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        choco install vulkan-sdk --version=1.3.283.0 -y
+        $VulkanPath = "C:\VulkanSDK\1.3.283.0"
+        echo "VULKAN_SDK=$VulkanPath" >> $env:GITHUB_ENV
+        echo "$VulkanPath\Bin" >> $env:GITHUB_PATH
         
         # Verify installation
         if (Test-Path "$VulkanPath\Bin\glslc.exe") {
           Write-Host "Vulkan SDK installed successfully"
           & "$VulkanPath\Bin\glslc.exe" --version
         } else {
-          Write-Error "Vulkan SDK installation failed"
+          Write-Error "Vulkan SDK installation failed - checking available versions"
+          choco list vulkan-sdk --all-versions
           exit 1
         }
       shell: powershell
@@ -77,19 +68,9 @@ jobs:
 
     - name: Install Vulkan SDK
       run: |
-        $VulkanVersion = "1.3.283.0"
-        $VulkanInstaller = "VulkanSDK-$VulkanVersion-Installer.exe"
-        $VulkanUrl = "https://sdk.lunarg.com/sdk/download/$VulkanVersion/windows/$VulkanInstaller"
-        
-        Write-Host "Downloading Vulkan SDK..."
-        Invoke-WebRequest -Uri $VulkanUrl -OutFile $VulkanInstaller
-        
-        Write-Host "Installing Vulkan SDK..."
-        Start-Process -FilePath $VulkanInstaller -ArgumentList @("/S") -Wait -NoNewWindow
-        
-        # Add Vulkan SDK to PATH
-        $VulkanPath = "C:\VulkanSDK\$VulkanVersion"
-        echo "$VulkanPath\Bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        choco install vulkan-sdk --version=1.3.283.0 -y
+        $VulkanPath = "C:\VulkanSDK\1.3.283.0"
+        echo "$VulkanPath\Bin" >> $env:GITHUB_PATH
       shell: powershell
 
     - name: Download build artifacts
