--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -20,22 +20,11 @@ jobs:
         msbuild-architecture: x64
 
     - name: Install Vulkan SDK
-      run: |
-        choco install vulkan-sdk --version=1.3.283.0 -y
-        $VulkanPath = "C:\VulkanSDK\1.3.283.0"
-        echo "VULKAN_SDK=$VulkanPath" >> $env:GITHUB_ENV
-        echo "$VulkanPath\Bin" >> $env:GITHUB_PATH
-        
-        # Verify installation
-        if (Test-Path "$VulkanPath\Bin\glslc.exe") {
-          Write-Host "Vulkan SDK installed successfully"
-          & "$VulkanPath\Bin\glslc.exe" --version
-        } else {
-          Write-Error "Vulkan SDK installation failed - checking available versions"
-          choco list vulkan-sdk --all-versions
-          exit 1
-        }
-      shell: powershell
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.283.0
+        vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, Vulkan-Utility-Libraries, VulkanMemoryAllocator, Vulkan-ExtensionLayer, Vulkan-ValidationLayers, SPIRV-Headers, SPIRV-Tools-opt, glslang, shaderc
+        vulkan-use-cache: true
 
     - name: Create build directory and run CMake
       run: |
@@ -67,11 +56,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Vulkan SDK
-      run: |
-        choco install vulkan-sdk --version=1.3.283.0 -y
-        $VulkanPath = "C:\VulkanSDK\1.3.283.0"
-        echo "$VulkanPath\Bin" >> $env:GITHUB_PATH
-      shell: powershell
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.283.0
+        vulkan-use-cache: true
 
     - name: Download build artifacts
       uses: actions/download-artifact@v4
